fix wrap link

--- a/wordpress/wp-content/themes/twentytwentyone/assets/css/style-module-9.css
+++ b/wordpress/wp-content/themes/twentytwentyone/assets/css/style-module-9.css
@@ -49,6 +49,7 @@
     color: #428bca;
     text-decoration: none;
     font-weight: lighter;
+    overflow-wrap: break-word;
 }
 
 .module-9 li a:hover {
